fix:Refactoring and Functionality Tuning - Probability and Visibility Tuning

--- a/static/index.html
+++ b/static/index.html
@@ -165,7 +165,7 @@
           </p>
 
           <!-- Tabla de historial -->
-          <table class="history-table" style="display: none">
+          <table class="history-table" >
             <thead>
               <tr>
                 <th>Fecha</th>
